2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c: Unref contact returned by
	empathy_contact_factory_get_user().

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* src/empathy.c: Make use of gtk_init_with_args for command line
	parsing. Fixes bug #491985 (Basilio Kublik).

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* data/icons/hicolor_status_scalable_empathy-pending.svg:
	* data/icons/hicolor_status_16x16_empathy-pending.svg:
	* data/icons/hicolor_status_scalable_empathy-extended-away.svg:
	* data/icons/hicolor_status_16x16_empathy-extended-away.svg:
	* data/icons/hicolor_status_scalable_empathy-away.svg:
	* data/icons/hicolor_status_16x16_empathy-away.svg:
	* data/icons/hicolor_status_scalable_empathy-offline.svg:
	* data/icons/hicolor_status_16x16_empathy-offline.svg:
	* data/icons/hicolor_status_scalable_empathy-busy.svg:
	* data/icons/hicolor_status_16x16_empathy-busy.svg:
	* data/icons/hicolor_status_scalable_empathy-available.svg:
	* data/icons/hicolor_status_16x16_empathy-available.svg:
	* data/icons/Makefile.am: Install SVG status images as scalable.
	Fixes bug #492984.

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.21.2.

2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-store.c:
	* libempathy-gtk/empathy-contact-list-store.h:
	* doc/libempathy-gtk/libempathy-gtk.types:
	* doc/libempathy-gtk/tmpl/empathy-contact-list-store.sgml: Rename
	COL_XXX to EMPATHY_CONTACT_LIST_STORE_COL_XXX since it's in public API.
	Fixes bug #470804.

2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.glade:
	* libempathy-gtk/empathy-group-chat.glade:
	* libempathy-gtk/empathy-main-window.glade:
	* libempathy-gtk/empathy-images.h:
	* src/empathy.c:
	* src/Makefile.am:
	* configure.ac:
	* data/jabber.profile:
	* data/salut.profile:
	* data/msn.profile: